--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,4 +46,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/my-react-app-new:latest
